# react-native-turbo-haptics

./: LICENSE  README.md
examples/example-fabric/: package.json
examples/example-paper/: package.json
examples/example-paper/android/app/: build.gradle
examples/example-paper/ios/example/: Info.plist
examples/example-paper/src/components/: GestureHandlerButton.tsx
examples/example-rn-0.79/: CLAUDE.md  package.json
examples/example-rn-0.79/android/app/: build.gradle
examples/example-rn-0.79/ios/example/: AppDelegate.swift
examples/example-rn-0.79/ios/example.xcodeproj/: project.pbxproj
package/: TurboHaptics.podspec  package.json  tsconfig.json
package/android/: CMakeLists.txt  build.gradle  proguard-rules.pro
package/android/src/fabric/java/com/turbohaptics/: TurboHapticsModule.kt  TurboHapticsPackage.kt
package/android/src/main/: AndroidManifest.xml
package/android/src/main/jni/: CMakeLists.txt  TurboHapticsHostObject.cpp  TurboHapticsHostObject.h
package/example-fabric/: App.tsx  package.json
package/example-fabric/android/app/: build.gradle
package/example-fabric/ios/example.xcodeproj/: project.pbxproj
package/example-paper/: App.tsx  metro.config.js  package.json
package/example-paper/ios/: Podfile
package/example-paper/ios/example.xcodeproj/: project.pbxproj
package/ios/: TurboHapticsHostObject.h  TurboHapticsHostObject.mm  TurboHapticsModule.h  TurboHapticsModule.mm
package/ios/TurboHaptics.xcodeproj/: project.pbxproj
package/src/: NativeTurboHaptics.ts  index.ts  initModule.ts
(+2 files in other folders)
